deploy/apps/application-tracker/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application-tracker
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
