deploy/apps/application-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-tracker
spec:
  type: ClusterIP
  selector:
    app: application-tracker
  ports:
    - name: http
      port: 80
      targetPort: http
