deploy/apps/application-tracker/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-tracker
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: application-tracker
      port:
        number: 80
  tls:
    - hosts:
        - tracker
